--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
             </div>
 
             <div class="col-md-8 allign-self-center navbar text-center">
-                <div id="my-header" class="my_header navbar-collapse justify-content-end">
+                <div id="my-header" style="position: relative;" class="my_header navbar-collapse justify-content-end">
                     <p>Say Hello to <span class="uniform-bg">SHOPNO!</span></p>
                     <p><span>Agency</span> CORPORATE SHOPNOTheme</p>
                     <button class="header_button text-center">
                         <span>contact us</span>
                     </button>
-                    <div class="row">
-                        <div class="col-auto align-self-end text-center">
-                            <img src="img/header-glass.png" alt="">
-                        </div>
+
+                    <div class="glass">
+                        <img src="img/header-glass.png" alt="">
                     </div>
+
 
                 </div>
             </div>
@@ -54,7 +54,16 @@
                 <h3>Lorem, ipsum dolor sit amet event landing template</h3>
             </div>
             <div class="row content">
-                <div class="col-md-6"></div>
+                <div class="col-md-6" style="position: relative;">
+                    <div class="false_carusel_img">
+                        <img src="img/about.png" alt="">
+                    </div>
+                    <div class="false_carusel_bg"></div>
+                    <div class="false_carusel_prg">
+                        <img src="img/carusel_progress.png" alt="">
+                    </div>
+
+                </div>
                 <div class="col-md-6 text-left">
                     <h3>we actually do amazing works</h3>
                     <p>A visual approach is an approach to a runway at an airport
@@ -65,7 +74,7 @@
                     <p>Preceding aircraft in approach correct sight. conducted under instrument flight rules.</p>
 
                     <h3>why we are the great?</h3>
-                    <p>
+                    <p class="about_p">
                         A visual approach is an approach to a runway at an airport
                         conducted under instrument flight rules.
                         The preceding aircraft in approach correct sight.</p>
@@ -74,7 +83,7 @@
         </div>
 
     </section>
-    <section id="works">
+    <section calss="works">
         <div class="container">
             <div class="title">
                 <h2>Featured works</h2>
@@ -82,35 +91,35 @@
             </div>
 
             <div class="row row-normal works">
-                <div class="col-4-md hideme">
+                <div class="col-md-4">
                     <div class="wrap-image">
-                        <img src="/img/featured_1.png"></div>
-
+                        <img class="img-responsive" src="/img/featured_1.png">
+                    </div>
                 </div>
-                <div class="col-4-md hideme">
+                <div class="col-md-4">
                     <div class="wrap-image">
-                        <img src="/img/featured_2.png"></div>
-
+                        <img class="img-responsive" src="/img/featured_2.png">
+                    </div>
                 </div>
-                <div class="col-4-md hideme">
+                <div class="col-md-4">
                     <div class="wrap-image">
-                        <img src="/img/featured_3.png"></div>
-
+                        <img class="img-responsive" src="/img/featured_3.png">
+                    </div>
                 </div>
-                <div class="col-4-md hideme">
+                <div class="col-md-4">
                     <div class="wrap-image">
-                        <img src="/img/featured_4.png"></div>
-
+                        <img class="img-responsive" src="/img/featured_4.png">
+                    </div>
                 </div>
-                <div class="col-4-md hideme">
+                <div class="col-md-4">
                     <div class="wrap-image">
-                        <img src="/img/featured_5.png"></div>
-
+                        <img class="img-responsive" src="/img/featured_5.png">
+                    </div>
                 </div>
-                <div class="col-4-md hideme">
+                <div class="col-md-4">
                     <div class="wrap-image">
-                        <img src="/img/featured_6.png"></div>
-
+                        <img class="img-responsive" src="/img/featured_6.png">
+                    </div>
                 </div>
             </div>
 
@@ -118,22 +127,123 @@
     </section>
 
 
-    <section id="services">
+    <section class="service">
         <div class="container">
             <div class="title">
-                <h2>Featured works</h2>
+                <h2>Services</h2>
                 <h3>Lorem, ipsum dolor sit amet event landing template</h3>
             </div>
-            <div class="row">
-                <div class="col-7-md"><img src="/img/service_1.png"></div>
-                <div class="col-5-md"><img src="/img/service_2.png"></div>
-                <div class="col-7-md"><img src="/img/service_3.png"></div>
-                <div class="col-5-md"><img src="/img/service_4.png"></div>
-                <div class="col-5-md"><img src="/img/service_5.png"></div>
-                <div class="col-7-md"><img src="/img/service_6.png"></div>
+            <div class="container">
+                <div class="row row-normal">
+                    <div class="col-md-7 service_item service_active bg-cian">
+                        <div class="service_image">
+                            <img src="img/service_1.png" alt="">
+                        </div>
+                        <div class="service_text">
+                            <h3>
+                                Designing is The Cool
+                            </h3>
+                            <p>
+                                Our most popular service is our Virtual Receptionist. We know that sometimes it’s
+                                something and you middle most this job was posted less than five minutes ago, and we
+                                think it’s a good match for you. If you submit a proposal now, you’ll be one of the
+                                first candidates. You may even catch the client while they’re still online.
+                            </p>
+                            <span><i class="fas fa-times fa-lg"></i></span>
+                        </div>
 
+                    </div>
+                    <div class="col-md-5 service_item">
+                        <div class="service_image">
+                            <img src="img/service_2.png" alt="">
+                        </div>
+
+                        <div class="service_text">
+                            <h3>
+                                cool psd Design
+                            </h3>
+                            <p>
+                                Our most popular service is our we know that sometimes it’s something and you middle
+                                most..
+                            </p>
+                            <span>Know More <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="row row-normal">
+                    <div class="col-md-7 service_item">
+                        <div class="service_image">
+                            <img src="img/service_3.png" alt="">
+                        </div>
+                        <div class="service_text">
+                            <h3>
+                                Designing is The Cool
+                            </h3>
+                            <p>
+                                Our most popular service is our Virtual Receptionist. We know that ...
+                            </p>
+                            <span>Know More <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+                    <div class="col-md-5 service_item">
+                        <div class="service_image">
+                            <img src="img/service_4.png" alt="">
+                        </div>
+
+                        <div class="service_text">
+                            <h3>
+                                PSD TO HTML KORI
+                            </h3>
+                            <p>
+                                We know that sometimes it’s something and you middle most..
+                            </p>
+                            <span>Know More <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="row row-normal">
+                    <div class="col-md-5 service_item">
+                        <div class="service_image">
+                            <img src="img/service_5.png" alt="">
+                        </div>
+
+                        <div class="service_text">
+                            <h3>
+                                cool psd Design
+                            </h3>
+                            <p>
+                                Our most popular service is our new virtual Receptionist you middle most.. </p>
+                            <span>Know More <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+                    <div class="col-md-7 service_item">
+                        <div class="service_image">
+                            <img src="img/service_6.png" alt="">
+                        </div>
+                        <div class="service_text">
+                            <h3>
+                                Designing is The Cool FOR
+                            </h3>
+                            <p>
+                                Our most popular service is our Virtual Receptionist. We know that sometimes it’s
+                                something and you middle most.. </p>
+                            <span>Know More <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+
+
+
+                </div>
             </div>
         </div>
+
+
+
+
 
 
 
@@ -145,29 +255,100 @@
                 <h2>small team</h2>
                 <h3>Lorem, ipsum dolor sit amet event landing template</h3>
             </div>
-            <div class="row">
-                <div class="col-4-md"> <img src="/img/team_1.png"></div>
-                <div class="col-4-md"> <img src="/img/team_2.png"></div>
-                <div class="col-4-md"> <img src="/img/team_3.png"></div>
-                <div class="col-4-md"> <img src="/img/team_4.png"></div>
-                <div class="col-4-md"> <img src="/img/team_5.png"></div>
-                <div class="col-4-md"> <img src="/img/team_6.png"></div>
+
+            <div class="row team">
+                <div class="col-4-md">
+                    <div class="wrap-image"><img src="/img/team_1.png"></div>
+                </div>
+                <div class="col-4-md" style="position: relative;">
+
+                    <div class="quote_wrap">
+                        <div class="quote content" style="position: relative;">
+                            <div class="quote_text">
+                                <h3>AL RAYHAN<span>/ UI designer</span></h3>
+                                <p>Lorem Ipsum is not simply is an action designer random text
+                                    It has roots in a piece. </p>
+                                <p class="icons">
+                                    <i class="fab fa-facebook-f"></i>
+                                    <i class="fab fa-twitter"></i>
+                                    <i class="far fa-basketball-ball"></i>
+                                    <i class="far fa-envelope"></i>
+
+                                </p>
+                            </div>
+                            <div class="quote_img">
+                                <img src="img/team_quote.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="wrap-image"><img src="/img/team_2.png"></div>
+                </div>
+                <div class="col-4-md">
+                    <div class="wrap-image"><img src="/img/team_3.png"></div>
+                </div>
+                <div class="col-4-md">
+                    <div class="wrap-image"><img src="/img/team_4.png"></div>
+                </div>
+                <div class="col-4-md">
+                    <div class="wrap-image"><img src="/img/team_5.png"></div>
+                </div>
+                <div class="col-4-md">
+                    <div class="wrap-image"><img src="/img/team_6.png"></div>
+                </div>
             </div>
         </div>
     </section>
-    <section id="team_speak">
+    <section class="team_speak">
         <div class="container">
             <div class="title">
                 <h2>what they say</h2>
                 <h3>Lorem, ipsum dolor sit amet event landing template</h3>
             </div>
             <div class="row">
-                <div class="col-4-md"> <img src="/img/team_1.png"></div>
-                <div class="col-7-md"> <img src="/img/team_2.png"></div>
+                <div class="col-md-5">
+
+                    <div class="false_carusel_img">
+                        <img src="img/team_3.png" alt="">
+                    </div>
+                    <div class="false_carusel_bg"></div>
+                    <div class="false_carusel_prg">
+                        <img src="img/carusel_progress.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-7" style="position: relative;">
+                    <div class="false_carusel_card">
+                        <div class="card_text quote_text content text-center">
+                            <h3>AL RAYHAN<span>/ UI /UX designer</span></h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and you
+                                standard dummy know that text ever since the 1500s, when an unknown printer took a
+                                galley of type and scrambled it to make a type specimen book. </p>
+                                <p class="star_icon">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </p>
+                        </div>
+                        
+                    </div>
+                    <div class="row false_carusel_button_box">
+                        <div class="col text-center allign-self-center">
+                            <button><i class="fas fa-angle-left"></i></button> </i>
+                        </div>
+                        <div class="col text-center allign-self-center">
+                            <button class="bg-cian"><i class="fas fa-angle-right"></i></button></i>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
         </div>
     </section>
+
     <section class="partners">
         <div class="container">
             <div class="partner clearfix">
@@ -176,10 +357,10 @@
         </div>
     </section>
 
-    <section id="contact_us">
+    <section class="contact_us">
         <div class="container">
-            <div class="row">
-                <div class="col-6-md">
+            <div class="row ">
+                <div class="col-md-6">
                     <div class="contacts clearfix">
                         <div class="input_fields">
                             <input type="text" class="input" placeholder="YOUR NAME *" type="text" required />
@@ -192,9 +373,10 @@
                             <textarea name="name" placeholder="YOUR MESSAGE *"></textarea>
                         </div>
                     </div>
-                    <a class="button" href="#">Send message</a>
+                    <button class="bg-cian">Send message</button>
+                    
                 </div>
-                <div class="col-5-md">
+                <div class="col-md-6">
                     <p>
                         Adress line 1
                         Adress line 2
@@ -204,9 +386,7 @@
                         Web: www.designagency.net
                         E-mail: info@designagency.net
                     </p>
-                    <script type="text/javascript" charset="utf-8" async
-                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8a74899717d5efee93351342cd4e6d9fa6c7e8adf0ef45a716ce7bb1f0562da6&amp;width=1024&amp;height=517&amp;lang=en-US&amp;scroll=true">
-                    </script>
+                    <img src="img/map.png" alt="">
                 </div>
             </div>
         </div>
@@ -215,7 +395,7 @@
 
     </section>
 
-    <footer class="foter">
+    <footer class="footer">
         <div class="container">
             <div class="footer_item clearfix">
                 <img src="img/corporation.png" alt="">
